Modulos_big overflowing images fixed

--- a/src/components/ModulosEducacionais_big/ModulosEducacionais_big.scss
+++ b/src/components/ModulosEducacionais_big/ModulosEducacionais_big.scss
@@ -1,10 +1,11 @@
 @import "../../variables";
 
 .modulosBig {
+  margin-top: 0;
   h3 {
     margin-bottom: 2rem;
     font-size: 2.2rem;
-    color: $red-ligh;
+    color: $red-dark;
   }
   .modulosBig-categorias {
     flex-direction: row;
@@ -13,10 +14,18 @@
     display: flex;
     button {
       font-size: clamp(0.1rem, 0.1rem + 1vw, 1.4rem);
-      background-color: transparent;
+      background-color: $ui-lighter;
+      padding: 0.2rem 0.9rem;
+      border-radius: 2rem;
       width: fit-content;
       text-wrap: nowrap;
+      transition: 150ms;
       cursor: pointer;
+      &:hover,
+      &:focus-visible {
+        background-color: $red-dark;
+        color: $ui-lightest;
+      }
     }
   }
   .modulosBig-resultados {
@@ -38,6 +47,8 @@
       position: relative;
       .modulosBig-items-img {
         border-radius: 1rem;
+        object-fit: cover;
+        max-width: 100%;
       }
       .modulosBig-items-titulo {
         font-size: clamp(0.1rem, 0.4rem + 1vw, 1.4rem);
@@ -89,17 +100,24 @@
     }
     .modulosBig-verModulo {
       box-shadow: 0px -20px 10px 12px rgba(255, 255, 255, 1);
+      border: 1px solid $ui-lightest ;
       background-color: $ui-grey;
       padding: 0.2rem 0.2rem;
       position: absolute;
       border-radius: 3rem;
       color: $ui-lightest;
+      transition: 200ms;
       font-size: 1rem;
       cursor: pointer;
       bottom: -1rem;
-      width: auto;
-      left: 0;
       right: 0;
+      left: 0;
+      &:hover,
+      &:focus-visible {
+        background-color: $ui-lighter;
+        border: 1px solid $ui-light ;
+        color: $ui-darkest;
+      }
     }
   }
   .modulosBig-paginacao {
